# agentic-battery-discovery-workbench-seed

./: .env.example  .gitignore  =8.0  ARCHIVE_CURRENT_PRODUCT_STATE.md  EXTRACTED_PRODUCT_BOUNDARIES.md  FUTURE_BATTERY_PIVOT_NOTE.md  INSTALL.md  LICENSE  README.md  SPLIT_STRATEGY.md  pyproject.toml
docs/: research-pack.md
scripts/: build_chembl_reference.py  setup.sh  verify_install.py
src/discovery_workbench/: __init__.py  banned_words.py  budget.py  constraints.py  crowding.py  evidence.py  molecule.py  pareto.py  ranker.py  ranker_validation.py  report_constants.py  report_renderer.py  report_schema.py  schemas.py
src/validation/: stages.py  (+1 more)
tests/: test_atom_and_ring_counts.py  test_benchmark.py  test_budget.py  test_clogp.py  test_confidence.py  test_constraint_checker.py  test_constraint_models.py  test_constraints.py  test_crowding.py  test_duplicate_detector.py  test_evidence.py  test_formal_charge.py  test_handoff.py  test_hull.py  test_hydrogen_bonds.py  test_keywords.py  test_materials_novelty.py  test_materials_validation.py  test_molecular_novelty.py  test_molecular_properties.py  test_molecular_validity.py  test_molecular_weight.py  test_molecule.py  test_novelty_checker.py  test_package.py  test_pains_filter.py  test_pareto.py  test_parse_elements.py  test_parse_numeric.py  test_parse_space_group.py  test_parse_stoichiometry.py  test_pipeline_stage3_5.py  test_property_parser.py  test_property_scores.py  test_ranker.py  test_ranker_validation.py  test_reinvent_client.py  test_report_banned_words.py  test_report_constants.py  test_report_renderer.py  (+17 more)
(+120 files in other folders)
